feat : fix edit flight data + docs api
