# routes/index.js
@@ -30,7 +30,7 @@ router.get('/list-airport', con.list.listAirport);
 
 router.get('/search?', con.fli.getSearch)
 router.post('/route', mid.cekLogin,rbac(MODUL.AdminDashboard, true, true), con.fli.create)
-router.put('/flight', mid.cekLogin,con.fli.update)
+router.put('/editFlight/:id', mid.cekLogin,con.fli.update)
 router.delete('/flight/:id', mid.cekLogin,con.fli.delete)
 
 router.get('/passenger', mid.cekLogin,con.pas.index)
